Fixed section card spacing

--- a/src/components/SectionHeader/style.css
+++ b/src/components/SectionHeader/style.css
@@ -10,7 +10,6 @@
   height: auto;
   flex-basis: 75%;
   margin: 12%;
-  margin-bottom: 4%;
   background-color: #646c79;
   align-content: center;
 }
